Installation, notebook password, typos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,56 @@
   "python.pythonPath": "/usr/local/anaconda3/envs/cloudman/bin/python",
   "files.exclude": {
     "**/*.pyc": true
-  }
+  },
+  "cSpell.words": [
+    "aakash",
+    "autopep",
+    "backports",
+    "broadwell",
+    "certifi",
+    "cloudman",
+    "cloudresourcemanager",
+    "configparser",
+    "cuda",
+    "envs",
+    "functools",
+    "gcloud",
+    "gpu's",
+    "gserviceaccount",
+    "highcpu",
+    "highmem",
+    "isort",
+    "libcxx",
+    "libcxxabi",
+    "libedit",
+    "libffi",
+    "lifecycle",
+    "mccabe",
+    "ncurses",
+    "nogpu",
+    "nospot",
+    "preemptible",
+    "pycodestyle",
+    "pylint",
+    "pytorch",
+    "readline",
+    "setuptools",
+    "singledispatch",
+    "sqlite",
+    "subnetwork",
+    "termcolor",
+    "verstr",
+    "verstrline",
+    "vsre"
+  ],
+  "cSpell.ignoreWords": [
+    "cpus",
+    "freesound",
+    "multiqueue",
+    "popen",
+    "scsi",
+    "ulmfit",
+    "virtio",
+    "zrsf"
+  ]
 }
